# signal-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Dockerfile  FUNDING.yml  README.md  SOCKET.md  build.gradle  build.gradle.kts  fix_and_enhance.py  generate_config.sh  gradle.properties  gradlew  jsonEventLoop_schema_V2.txt  json_socket.md  jsonevtloop_jsonschema_V2.txt  libsignal-version  native-build.sh  native.Containerfile  run_tests.sh  settings.gradle  settings.gradle.kts  signal-cli-script
.devcontainer/: Dockerfile  devcontainer.json
DEBIAN/: postinst
buildSrc/: build.gradle.kts
client/: Cargo.toml
client-golang/: signal-cli-api.go
client/src/: cli.rs  jsonrpc.rs  main.rs  tcp.rs
client/src/transports/: ipc.rs  mod.rs  stream_codec.rs  tcp.rs
data/: org.asamk.Signal.conf  org.asamk.Signal.service  org.asamk.SignalCli.metainfo.xml  org.asamk.Signal_NUMBER.conf  org.asamk.TextSecure.conf  org.asamk.TextSecure.service  signal-cli-socket.service  signal-cli-socket.socket  signal-cli.service  signal-cli.sysusers.conf  signal-cli.tmpfiles.conf  signal-cli@.service  signal.service  textsecure-cli@.service  textsecure.service
docs/: CALL_TUNNEL.md
graalvm-config-dir/: jni-config.json  proxy-config.json  reachability-metadata.json  reflect-config.json  resource-config.json
gradle/: libs.versions.toml
lib/: build.gradle.kts
man/: Makefile  signal-cli-dbus.3.adoc  signal-cli-dbus.5.adoc  signal-cli-jsonrpc.5.adoc  signal-cli.1.adoc  signal-cli.1.txt  signal-cli.md.adoc
reproducible-builds/: README.md  build.Containerfile  build.sh  (+5 more)
(+769 files in other folders)
