[package]
name = "signal-cli-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive", "wrap_help"] }
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-client-transports = { version = "18", default-features = false, features = [
    "ipc",
] }
jsonrpc-derive = "18"
jsonrpc-server-utils = "18"
log = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "net"] }

[patch.crates-io]
jsonrpc-client-transports = { git = "https://github.com/AsamK/jsonrpc", branch = "client_subscribe_named_params" }
jsonrpc-derive = { git = "https://github.com/AsamK/jsonrpc", branch = "client_subscribe_named_params" }
